Forward focus to the contentItem of editable spinboxes

This fixes the scenario where a SpinBox is shown for the first time
with focus, but its editor (TextInput) doesn't have active focus.

tst_focus' keyNavigation.qml had to be adjusted, as an editable
spinbox will now consume key events.

Task-number: QTBUG-60356
Change-Id: I3af0260a22e9633ab6110d6adab7b39a22b849de
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>